--- a/helper.gradle
+++ b/helper.gradle
@@ -6,8 +6,8 @@ buildscript {
             url = 'https://repo.spongepowered.org/repository/maven-public/'
         }
         maven {
-            name = 'Forge'
-            url = 'https://maven.minecraftforge.net'
+            name = 'NeoForge'
+            url = 'https://maven.neoforged.net/releases'
         }
         maven {
             name = 'Fabric'
@@ -22,7 +22,7 @@ buildscript {
         classpath 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.9.11'
         classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:4.2.1.3168'
         classpath 'org.spongepowered:vanillagradle:0.2.1-SNAPSHOT'
-        classpath 'net.minecraftforge.gradle:ForgeGradle:[6.0,6.2)'
+        classpath 'net.neoforged:NeoGradle:[6.0.13, 6.2)'
         classpath 'fabric-loom:fabric-loom.gradle.plugin:1.2-SNAPSHOT'
         classpath 'net.darkhax.curseforgegradle:CurseForgeGradle:1.1.15'
         classpath 'com.modrinth.minotaur:Minotaur:2.+'
@@ -78,7 +78,7 @@ allprojects {
 
     ext {
         minecraftVersion = "1.20.1"
-        forgeVersion = "47.0.35"
+        forgeVersion = "47.1.70"
         fabricLoaderVersion = "0.14.22"
         fabricApiVersion = "0.87.0+1.20.1"
         // https://www.curseforge.com/minecraft/mc-mods/jei/files
@@ -227,7 +227,7 @@ allprojects {
             }
         }
         dependencies {
-            minecraft "net.minecraftforge:forge:${minecraftVersion}-${forgeVersion}"
+            minecraft "net.neoforged:forge:${minecraftVersion}-${forgeVersion}"
             apis.collect {
                 implementation project(it)
             }
