fix: declare junit launcher for pitest
See:
* https://github.com/szpak/gradle-pitest-plugin/issues/337
* https://github.com/pitest/pitest-junit5-plugin/issues/100

--- a/helper.gradle
+++ b/helper.gradle
@@ -93,11 +93,16 @@ allprojects {
     ext.enableMutationTesting = {
         apply plugin: info.solidsoft.gradle.pitest.PitestPlugin
         pitest {
-            junit5PluginVersion = "1.1.2"
-            pitestVersion = "1.10.4"
+            junit5PluginVersion = "1.2.0"
+            pitestVersion = "1.14.4"
             outputFormats.set(['HTML'])
             mutationThreshold.set(90)
             coverageThreshold.set(80)
+        }
+        dependencies {
+            testRuntimeOnly("org.junit.platform:junit-platform-launcher") {
+                because("required for pitest")
+            }
         }
     }
 
