--- a/helper.gradle
+++ b/helper.gradle
@@ -19,11 +19,11 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.9.11'
-        classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:4.2.1.3168'
+        classpath 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.15.0'
+        classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:4.4.1.3373'
         classpath 'org.spongepowered:vanillagradle:0.2.1-SNAPSHOT'
-        classpath 'net.neoforged:NeoGradle:[6.0.13, 6.2)'
-        classpath 'fabric-loom:fabric-loom.gradle.plugin:1.2-SNAPSHOT'
+        classpath 'net.neoforged.gradle:userdev:7.0.80'
+        classpath 'fabric-loom:fabric-loom.gradle.plugin:1.5-SNAPSHOT'
         classpath 'net.darkhax.curseforgegradle:CurseForgeGradle:1.1.15'
         classpath 'com.modrinth.minotaur:Minotaur:2.+'
     }
@@ -65,7 +65,7 @@ allprojects {
 
     apply plugin: 'checkstyle'
     checkstyle {
-        toolVersion = "10.6.0"
+        toolVersion = "10.12.6"
     }
 
     processResources {
@@ -77,14 +77,15 @@ allprojects {
     }
 
     ext {
-        minecraftVersion = "1.20.1"
-        forgeVersion = "47.1.70"
-        fabricLoaderVersion = "0.14.22"
-        fabricApiVersion = "0.87.0+1.20.1"
+        minecraftVersion = "1.20.4"
+        forgeVersion = "20.4.137-beta"
+        fabricLoaderVersion = "0.15.6"
+        fabricApiVersion = "0.95.1+1.20.4"
         // https://www.curseforge.com/minecraft/mc-mods/jei/files
-        jeiVersion = "15.2.0.27"
+        jeiVersion = "17.2.0.41"
         // https://www.curseforge.com/minecraft/mc-mods/roughly-enough-items/files
-        reiVersion = "12.0.626"
+        reiVersion = "14.0.688"
+        // TODO
         architecturyVersion = "8.1.73" // dependency of rei
         clothMathVersion = "0.6.1" // dependency of rei
         clothConfigVersion = "10.0.96" // dependency of rei
@@ -93,16 +94,11 @@ allprojects {
     ext.enableMutationTesting = {
         apply plugin: info.solidsoft.gradle.pitest.PitestPlugin
         pitest {
-            junit5PluginVersion = "1.2.0"
-            pitestVersion = "1.14.4"
+            junit5PluginVersion = "1.2.1"
+            pitestVersion = "1.15.3"
             outputFormats.set(['HTML'])
             mutationThreshold.set(90)
             coverageThreshold.set(80)
-        }
-        dependencies {
-            testRuntimeOnly("org.junit.platform:junit-platform-launcher") {
-                because("required for pitest")
-            }
         }
     }
 
@@ -174,71 +170,37 @@ allprojects {
             main.resources.srcDirs += 'src/generated/resources'
         }
         dependencies {
-            compileOnly "org.spongepowered:mixin:0.8.4"
+            compileOnly "org.spongepowered:mixin:0.8.5"
         }
     }
 
     ext.forgeProject = { String modId, Project commonProject = null, ArrayList apis = [], ArrayList compileApis = [] ->
-        apply plugin: net.minecraftforge.gradle.userdev.UserDevPlugin
-        minecraft {
-            mappings channel: 'official', version: minecraftVersion
-            accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
-            runs {
-                client {
-                    workingDirectory project.file('run')
-                    ideaModule "${rootProject.name}.${project.name}.main"
-                    taskName 'Client'
-                    mods {
-                        modClientRun {
-                            source sourceSets.main
-                            apis.collect {
-                                source(project(it).sourceSets.main)
-                            }
-                            compileApis.collect {
-                                source(project(it).sourceSets.main)
-                            }
-                            if (commonProject != null) {
-                                source(commonProject.sourceSets.main)
-                            }
-                        }
-                    }
-                    property 'mixin.env.remapRefMap', 'true'
-                    property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"
-                }
-                server {
-                    workingDirectory project.file('run')
-                    ideaModule "${rootProject.name}.${project.name}.main"
-                    taskName 'Server'
-                    mods {
-                        modServerRun {
-                            source sourceSets.main
-                            apis.collect {
-                                source(project(it).sourceSets.main)
-                            }
-                            compileApis.collect {
-                                source(project(it).sourceSets.main)
-                            }
-                            if (commonProject != null) {
-                                source(commonProject.sourceSets.main)
-                            }
-                        }
-                    }
-                    property 'mixin.env.remapRefMap', 'true'
-                    property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"
-                }
-                data {
-                    var destinationProject = commonProject != null ? commonProject : project
-                    var existingProject = commonProject != null ? commonProject : project
-                    args '--mod', modId, '--all', '--output', destinationProject.file('src/generated/resources'), "--existing", existingProject.file('src/main/resources')
-                    ideaModule "${rootProject.name}.${project.name}.main"
-                    taskName 'Data'
-                    property 'mixin.env.remapRefMap', 'true'
-                    property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"
-                }
+        apply plugin: net.neoforged.gradle.userdev.UserDevPlugin
+        if (file('src/main/resources/META-INF/accesstransformer.cfg').exists()) {
+            minecraft.accessTransformers.file file('src/main/resources/META-INF/accesstransformer.cfg')
+        }
+        runs {
+            configureEach {
+                modSource project.sourceSets.main
+            }
+            client {
+                systemProperty 'neoforge.enabledGameTestNamespaces', modId
+            }
+            server {
+                systemProperty 'neoforge.enabledGameTestNamespaces', modId
+                programArgument '--nogui'
+            }
+            gameTestServer {
+                systemProperty 'neoforge.enabledGameTestNamespaces', modId
+            }
+            data {
+                var destinationProject = commonProject != null ? commonProject : project
+                var existingProject = commonProject != null ? commonProject : project
+                programArguments.addAll '--mod', modId, '--all', '--output', destinationProject.file('src/generated/resources/').getAbsolutePath(), '--existing', existingProject.file('src/main/resources/').getAbsolutePath()
             }
         }
         dependencies {
-            minecraft "net.neoforged:forge:${minecraftVersion}-${forgeVersion}"
+            implementation "net.neoforged:neoforge:${forgeVersion}"
             apis.collect {
                 implementation project(it)
             }
@@ -258,7 +220,8 @@ allprojects {
             }
             from project.sourceSets.main.resources
         }
-        tasks.withType(JavaCompile) {
+        Spec<Task> notNeoTask = { Task t -> !t.name.startsWith("neo") } as Spec<Task>
+        tasks.withType(JavaCompile).matching(notNeoTask).configureEach {
             apis.collect {
                 source(project(it).sourceSets.main.allSource)
             }
@@ -269,7 +232,6 @@ allprojects {
                 source(commonProject.sourceSets.main.allSource)
             }
         }
-        jar.finalizedBy('reobfJar')
     }
 
     ext.fabricProject = { String modId, Project commonProject = null, ArrayList apis = [], ArrayList compileApis = [] ->
@@ -284,7 +246,6 @@ allprojects {
             minecraft "com.mojang:minecraft:${minecraftVersion}"
             mappings loom.layered() {
                 officialMojangMappings()
-                parchment("org.parchmentmc.data:parchment-1.20.1:2023.08.13@zip")
             }
             modImplementation "net.fabricmc:fabric-loader:${fabricLoaderVersion}"
             modImplementation "net.fabricmc.fabric-api:fabric-api:${fabricApiVersion}"
