--- a/helper.gradle
+++ b/helper.gradle
@@ -65,7 +65,13 @@ allprojects {
 
     apply plugin: 'checkstyle'
     checkstyle {
-        toolVersion = "10.12.6"
+        toolVersion = "10.13.0"
+    }
+    // https://github.com/checkstyle/checkstyle/issues/14211#issuecomment-1884129948
+    configurations.checkstyle {
+        resolutionStrategy.capabilitiesResolution.withCapability("com.google.collections:google-collections") {
+            select("com.google.guava:guava:0")
+        }
     }
 
     processResources {
